Sync with trunk to revision 600007.